--- a/scripts/tables/s_table_2_strain_ESBL_by_index_patient.html
+++ b/scripts/tables/s_table_2_strain_ESBL_by_index_patient.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-09" />
+<meta name="date" content="2025-10-31" />
 
 <title>Supplemental Table 2: Strain and ESBL gene presence stratified by household</title>
 
@@ -577,7 +577,7 @@ display: none;
 <h1 class="title toc-ignore">Supplemental Table 2: Strain and ESBL gene
 presence stratified by household</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-09</h4>
+<h4 class="date">2025-10-31</h4>
 
 </div>
 
@@ -603,7 +603,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                                           &quot;msla0572.local&quot; 
+                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -615,7 +615,7 @@ Sys.info()</code></pre>
 <pre class="r"><code>sessionInfo()</code></pre>
 <pre><code>R version 4.5.1 (2025-06-13)
 Platform: x86_64-apple-darwin20
-Running under: macOS Sequoia 15.7
+Running under: macOS Sequoia 15.7.1
 
 Matrix products: default
 BLAS:   /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRblas.0.dylib 
@@ -721,6 +721,31 @@ AA474
 1
 </td>
 <td style="text-align:left;">
+Klebsiella pneumoniae ST 45 Cluster 1
+</td>
+<td style="text-align:left;">
+AA031, AA110, AA123, AA277, AB531, AC082, AD094
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+AA277
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+1H
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
 Escherichia coli ST 6321 Cluster 1
 </td>
 <td style="text-align:left;">
@@ -744,13 +769,13 @@ AA378
 1H
 </td>
 <td style="text-align:right;">
-1
+2
 </td>
 <td style="text-align:left;">
 Klebsiella pneumoniae ST 45 Cluster 1
 </td>
 <td style="text-align:left;">
-AA031, AA110, AA123, AA277, AB531, AC082, AD094
+AA277, AB183, AB531, AE974
 </td>
 <td style="text-align:left;">
 blaCTX-M-15
@@ -788,31 +813,6 @@ blaCTX-M-15
 </td>
 <td style="text-align:left;">
 AC026
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-1H
-</td>
-<td style="text-align:right;">
-2
-</td>
-<td style="text-align:left;">
-Klebsiella pneumoniae ST 45 Cluster 1
-</td>
-<td style="text-align:left;">
-AA277, AB183, AB531, AE974
-</td>
-<td style="text-align:left;">
-blaCTX-M-15
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-blaCTX-M-15
-</td>
-<td style="text-align:left;">
-AA277
 </td>
 </tr>
 <tr>
@@ -1429,16 +1429,15 @@ AA171
 1
 </td>
 <td style="text-align:left;">
-Escherichia coli ST 216 Singleton
+Klebsiella pneumoniae ST 6602 Singleton
 </td>
 <td style="text-align:left;">
-AA474, AA552, AA833
+AA275, AA552, AB685, AC082
 </td>
 <td style="text-align:left;">
-blaEC-15*, blaKPC-3
+blaKPC-3
 </td>
 <td style="text-align:left;">
-blaEC-15*
 </td>
 <td style="text-align:left;">
 blaKPC-3
@@ -1455,15 +1454,16 @@ AA552
 1
 </td>
 <td style="text-align:left;">
-Klebsiella pneumoniae ST 6602 Singleton
+Escherichia coli ST 216 Singleton
 </td>
 <td style="text-align:left;">
-AA275, AA552, AB685, AC082
+AA474, AA552, AA833
 </td>
 <td style="text-align:left;">
-blaKPC-3
+blaEC-15*, blaKPC-3
 </td>
 <td style="text-align:left;">
+blaEC-15*
 </td>
 <td style="text-align:left;">
 blaKPC-3
