--- a/scripts/ESBL_plasmids/generate_beta_lactam_presence_absence_data_MERLIN_cohort.html
+++ b/scripts/ESBL_plasmids/generate_beta_lactam_presence_absence_data_MERLIN_cohort.html
@@ -11,9 +11,9 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-09" />
+<meta name="date" content="2025-10-31" />
 
-<title>Generate Beta-lactam presence and location data for each index isolate</title>
+<title>Generate Beta-lactam presence and location data for full cohort</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -575,9 +575,9 @@ display: none;
 
 
 <h1 class="title toc-ignore">Generate Beta-lactam presence and location
-data for each index isolate</h1>
+data for full cohort</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-09</h4>
+<h4 class="date">2025-10-31</h4>
 
 </div>
 
@@ -590,6 +590,9 @@ packages &lt;- c(&quot;tidyverse&quot;,&#39;kableExtra&#39;)
 #Load Packages
 invisible(lapply(packages,library,character.only=T,quietly=T))
 
+# Load functions
+source(&quot;./scripts/ESBL_plasmids/ESCrE_plasmid_location_functions.R&quot;)
+
 # Print environment
 set.seed(45) 
 Sys.info()</code></pre>
@@ -600,7 +603,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                                           &quot;msla0572.local&quot; 
+                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -612,7 +615,7 @@ Sys.info()</code></pre>
 <pre class="r"><code>sessionInfo()</code></pre>
 <pre><code>R version 4.5.1 (2025-06-13)
 Platform: x86_64-apple-darwin20
-Running under: macOS Sequoia 15.7
+Running under: macOS Sequoia 15.7.1
 
 Matrix products: default
 BLAS:   /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRblas.0.dylib 
@@ -647,101 +650,99 @@ loaded via a namespace (and not attached):
 </div>
 <div id="load-data" class="section level1">
 <h1>Load data</h1>
-<pre class="r"><code>df &lt;-  readRDS(&quot;./data/dataset/MERLIN_cohort_index_cases_metadata_final.RDS&quot;)   %&gt;% subset(WGS_escre == TRUE &amp; qc_pass == TRUE) 
+<pre class="r"><code>df &lt;-  readRDS(&quot;./data/dataset/MERLIN_cohort_metadata_final.RDS&quot;)   %&gt;% subset(WGS_escre == TRUE &amp; qc_pass == TRUE) 
 amrfinder_mat &lt;- readRDS(&quot;./data/amrfinder/amrfinder_matrix.RDS&quot;) %&gt;% subset(rownames(.) %in% df$genomic_id) %&gt;% select_if(colSums(.)&gt;0)
 amrfinder &lt;- readRDS(&quot;./data/amrfinder/amrfinder_cleaned.RDS&quot;)  %&gt;% subset(element_symbol_renamed %in% colnames(amrfinder_mat))
 ESCrE_genotype_info &lt;- readRDS(&quot;./data/amrfinder/beta_lactamase_summary_MERLIN_cohort.RDS&quot;)  %&gt;% subset(element_symbol_renamed %in% colnames(amrfinder_mat))
 mobsuite_gene_pres &lt;- readRDS(&quot;./data/ESBL_plasmids/amrfinder_mobsuite_beta_lactamase_presence.RDS&quot;) %&gt;% subset(genomic_id %in% df$genomic_id) 
-ESCrE_plasmid_clusters &lt;- readRDS(&quot;./data/ESBL_plasmids/amrfinder_ESCrE_contig_matrix.RDS&quot;) %&gt;% subset(rownames(.) %in% df$genomic_id) %&gt;% select_if(colSums(.)&gt;0) </code></pre>
+ESCrE_plasmid_clusters &lt;- readRDS(&quot;./data/ESBL_plasmids/amrfinder_ESCrE_contig_matrix.RDS&quot;) %&gt;% subset(rownames(.) %in% df$genomic_id) %&gt;% select_if(colSums(.)&gt;0) 
+
+paste0(&quot;Total tested genomes: &quot;,nrow(df))</code></pre>
+<pre><code>[1] &quot;Total tested genomes: 168&quot;</code></pre>
+</div>
+<div id="merge" class="section level1">
+<h1>Merge</h1>
 <pre class="r"><code>df &lt;- left_join(df,amrfinder_mat %&gt;% mutate(genomic_id = rownames(.))) %&gt;% left_join(ESCrE_plasmid_clusters %&gt;% mutate(genomic_id=rownames(.)))</code></pre>
 </div>
 <div id="get-bla-and-esbl-genes" class="section level1">
 <h1>Get BLA and ESBL genes</h1>
 <pre class="r"><code>bla_genes &lt;- ESCrE_genotype_info$element_symbol_renamed%&gt;% unique %&gt;% sort
 paste0(&quot;Number of beta-lactamase genes identified: &quot; , length(ESCrE_genotype_info$element_symbol_renamed %&gt;% unique))</code></pre>
-<pre><code>[1] &quot;Number of beta-lactamase genes identified: 36&quot;</code></pre>
+<pre><code>[1] &quot;Number of beta-lactamase genes identified: 50&quot;</code></pre>
 <pre class="r"><code>table(ESCrE_genotype_info$element_symbol_renamed,ESCrE_genotype_info$blactam_class) </code></pre>
 <pre><code>              
-               A C D
-  blaACT-115   0 1 0
-  blaACT-17    0 1 0
-  blaACT-24    0 1 0
-  blaACT-75*   0 1 0
-  blaCMY-13*   0 1 0
-  blaCMY-190*  0 1 0
-  blaCMY-2     0 1 0
-  blaCMY-25*   0 1 0
-  blaCMY-4     0 1 0
-  blaCMY-65*   0 1 0
-  blaCMY-67*   0 1 0
-  blaCTX-M-15  1 0 0
-  blaCTX-M-27  1 0 0
-  blaCTX-M-3   1 0 0
-  blaCTX-M-55  1 0 0
-  blaCTX-M-55* 1 0 0
-  blaEC        0 1 0
-  blaEC-15*    0 1 0
-  blaEC-5      0 1 0
-  blaEC-5*     0 1 0
-  blaEC-8*     0 1 0
-  blaKPC-2     1 0 0
-  blaKPC-3     1 0 0
-  blaOXA-1     0 0 1
-  blaOXY-1-11  1 0 0
-  blaSHV-1     1 0 0
-  blaSHV-1?    1 0 0
-  blaSHV-11    1 0 0
-  blaSHV-12    1 0 0
-  blaSHV-187   1 0 0
-  blaSHV-28    1 0 0
-  blaTEM-1     1 0 0
-  blaTEM-1?    1 0 0
-  blaTEM-1?*   1 0 0
-  blaTEM-105?* 1 0 0
-  blaTEM-214   1 0 0</code></pre>
+               A B C D
+  ampC*        0 0 1 0
+  blaACT-115   0 0 1 0
+  blaACT-12*   0 0 1 0
+  blaACT-131*  0 0 1 0
+  blaACT-16    0 0 1 0
+  blaACT-17    0 0 1 0
+  blaACT-24    0 0 1 0
+  blaACT-25    0 0 1 0
+  blaACT-27    0 0 1 0
+  blaACT-43    0 0 1 0
+  blaACT-75*   0 0 1 0
+  blaCMY-13    0 0 1 0
+  blaCMY-13*   0 0 1 0
+  blaCMY-189*  0 0 1 0
+  blaCMY-190*  0 0 1 0
+  blaCMY-2     0 0 1 0
+  blaCMY-2?    0 0 1 0
+  blaCMY-25*   0 0 1 0
+  blaCMY-4     0 0 1 0
+  blaCMY-48    0 0 1 0
+  blaCMY-65*   0 0 1 0
+  blaCMY-67*   0 0 1 0
+  blaCTX-M-15  1 0 0 0
+  blaCTX-M-27  1 0 0 0
+  blaCTX-M-3   1 0 0 0
+  blaCTX-M-55  1 0 0 0
+  blaCTX-M-55* 1 0 0 0
+  blaEC        0 0 1 0
+  blaEC-15*    0 0 1 0
+  blaEC-19*    0 0 1 0
+  blaEC-5      0 0 1 0
+  blaEC-5*     0 0 1 0
+  blaEC-8*     0 0 1 0
+  blaKPC-2     1 0 0 0
+  blaKPC-3     1 0 0 0
+  blaNDM-5     0 1 0 0
+  blaOXA-1     0 0 0 1
+  blaOXY-1-11  1 0 0 0
+  blaSHV-1     1 0 0 0
+  blaSHV-1?    1 0 0 0
+  blaSHV-11    1 0 0 0
+  blaSHV-12    1 0 0 0
+  blaSHV-187   1 0 0 0
+  blaSHV-205   1 0 0 0
+  blaSHV-28    1 0 0 0
+  blaTEM-1     1 0 0 0
+  blaTEM-1?    1 0 0 0
+  blaTEM-1?*   1 0 0 0
+  blaTEM-105?* 1 0 0 0
+  blaTEM-214   1 0 0 0</code></pre>
 <pre class="r"><code>escre_genotypes &lt;- subset(ESCrE_genotype_info,ESCrE==T)
 ESCrE_genes = escre_genotypes$element_symbol_renamed %&gt;% sort %&gt;% unique
 paste0(&quot;ESCrE beta-lactamase genes identified: &quot; ,nrow(escre_genotypes)) </code></pre>
-<pre><code>[1] &quot;ESCrE beta-lactamase genes identified: 25&quot;</code></pre>
+<pre><code>[1] &quot;ESCrE beta-lactamase genes identified: 38&quot;</code></pre>
 <pre class="r"><code>escre_genotypes$element_symbol_renamed %&gt;% sort</code></pre>
-<pre><code> [1] &quot;blaACT-115&quot;   &quot;blaACT-17&quot;    &quot;blaACT-24&quot;    &quot;blaACT-75*&quot;   &quot;blaCMY-13*&quot;  
- [6] &quot;blaCMY-190*&quot;  &quot;blaCMY-2&quot;     &quot;blaCMY-25*&quot;   &quot;blaCMY-4&quot;     &quot;blaCMY-65*&quot;  
-[11] &quot;blaCMY-67*&quot;   &quot;blaCTX-M-15&quot;  &quot;blaCTX-M-27&quot;  &quot;blaCTX-M-3&quot;   &quot;blaCTX-M-55&quot; 
-[16] &quot;blaCTX-M-55*&quot; &quot;blaEC&quot;        &quot;blaEC-15*&quot;    &quot;blaEC-5&quot;      &quot;blaEC-5*&quot;    
-[21] &quot;blaEC-8*&quot;     &quot;blaKPC-2&quot;     &quot;blaKPC-3&quot;     &quot;blaOXY-1-11&quot;  &quot;blaSHV-12&quot;   </code></pre>
+<pre><code> [1] &quot;ampC*&quot;        &quot;blaACT-115&quot;   &quot;blaACT-12*&quot;   &quot;blaACT-131*&quot;  &quot;blaACT-16&quot;   
+ [6] &quot;blaACT-17&quot;    &quot;blaACT-24&quot;    &quot;blaACT-25&quot;    &quot;blaACT-27&quot;    &quot;blaACT-43&quot;   
+[11] &quot;blaACT-75*&quot;   &quot;blaCMY-13&quot;    &quot;blaCMY-13*&quot;   &quot;blaCMY-189*&quot;  &quot;blaCMY-190*&quot; 
+[16] &quot;blaCMY-2&quot;     &quot;blaCMY-2?&quot;    &quot;blaCMY-25*&quot;   &quot;blaCMY-4&quot;     &quot;blaCMY-48&quot;   
+[21] &quot;blaCMY-65*&quot;   &quot;blaCMY-67*&quot;   &quot;blaCTX-M-15&quot;  &quot;blaCTX-M-27&quot;  &quot;blaCTX-M-3&quot;  
+[26] &quot;blaCTX-M-55&quot;  &quot;blaCTX-M-55*&quot; &quot;blaEC&quot;        &quot;blaEC-15*&quot;    &quot;blaEC-19*&quot;   
+[31] &quot;blaEC-5&quot;      &quot;blaEC-5*&quot;     &quot;blaEC-8*&quot;     &quot;blaKPC-2&quot;     &quot;blaKPC-3&quot;    
+[36] &quot;blaNDM-5&quot;     &quot;blaOXY-1-11&quot;  &quot;blaSHV-12&quot;   </code></pre>
 </div>
 <div id="get-bla-and-esbl-data-on-plasmids-and-chromosome" class="section level1">
 <h1>Get BLA and ESBL data on plasmids and chromosome</h1>
-<pre class="r"><code>get_ESCrE_genes_data &lt;- function(isolate,mobsuite_gene_pres,bla_genes,ESCrE_genes){
-  mobsuite_df &lt;- subset(mobsuite_gene_pres,genomic_id == isolate)
-  plasmids_str &lt;- mobsuite_df$type %&gt;% subset(. != &#39;chromosome&#39;)  %&gt;% paste0(collapse=&#39;;&#39;)  %&gt;% {ifelse(is_empty(.)==T,&quot;&quot;,.)}  
-  bla_genes_str &lt;- mobsuite_df %&gt;% select(bla_genes) %&gt;% select_if(colSums(.)==1) %&gt;% colnames() %&gt;% paste0(collapse=&#39;;&#39;)
-  ESCrE_genes_str &lt;- mobsuite_df %&gt;% select(ESCrE_genes) %&gt;% select_if(colSums(.)==1) %&gt;% colnames() %&gt;% paste0(collapse=&quot;;&quot;) %&gt;% {ifelse(length(.)==0,&quot;&quot;,.)}
-  bla_chromosome_genes &lt;-  mobsuite_df %&gt;% subset(type==&#39;chromosome&#39;) %&gt;% select(bla_genes) %&gt;% select_if(colSums(.)==1)  %&gt;% colnames() %&gt;% paste0(collapse=&quot;;&quot;) %&gt;% {ifelse(length(.)==0,&quot;&quot;,.)}
-  ESCrE_chromosome_genes &lt;-  mobsuite_df %&gt;% subset(type==&#39;chromosome&#39;) %&gt;% select(ESCrE_genes) %&gt;% select_if(colSums(.)==1)  %&gt;% colnames() %&gt;% paste0(collapse=&quot;;&quot;) %&gt;% {ifelse(length(.)==0,&quot;&quot;,.)}
-  ESCrE_plasmid_genes &lt;- mobsuite_df %&gt;% subset(type!=&#39;chromosome&#39;) %&gt;% select(ESCrE_genes) %&gt;% select_if(colSums(.)==1)  %&gt;% colnames() %&gt;% paste0(collapse=&quot;;&quot;) %&gt;% {ifelse(length(.)==0,&quot;&quot;,.)}
-  bla_plasmids &lt;- subset(mobsuite_df,BETA_LACTAM_contig ==1) %&gt;% .$type %&gt;% subset(. != &#39;chromosome&#39;) %&gt;% paste0(collapse=&quot;;&quot;) %&gt;% {ifelse(length(.)==0,&quot;&quot;,.)}
-  ESCrE_plasmids &lt;- subset(mobsuite_df,ESCrE_contig ==1) %&gt;% .$type %&gt;% subset(. != &#39;chromosome&#39;) %&gt;% paste0(collapse=&quot;;&quot;) %&gt;% {ifelse(length(.)==0,&quot;&quot;,.)}
-     
-  results &lt;- cbind.data.frame(genomic_id = isolate,plasmids=plasmids_str,bla_genes=bla_genes_str,ESCrE_genes=ESCrE_genes_str,bla_chromosome_genes=bla_chromosome_genes,ESCrE_chromosome_genes=ESCrE_chromosome_genes,ESCrE_plasmid_genes=ESCrE_plasmid_genes,bla_plasmids=bla_plasmids,ESCrE_plasmids = ESCrE_plasmids)
-  return(results)
-}
-
-plasmid_data &lt;- lapply(df$genomic_id,get_ESCrE_genes_data,mobsuite_gene_pres,bla_genes,ESCrE_genes) %&gt;% do.call(rbind,.) </code></pre>
+<pre class="r"><code>plasmid_data &lt;- lapply(df$genomic_id,get_ESCrE_genes_data,mobsuite_gene_pres,bla_genes,ESCrE_genes) %&gt;% do.call(rbind,.) </code></pre>
 </div>
 <div id="plasmidic-esbl" class="section level1">
 <h1>Plasmidic ESBL</h1>
-<pre class="r"><code>analyze_frequency_on_plasmid &lt;- function(ESCrE,plasmid_data){
-  chromosome_ESCrE &lt;- str_split(string = plasmid_data$ESCrE_chromosome_genes,&#39;;&#39;) %&gt;% unlist %&gt;% subset(.==ESCrE)
-  plasmid_ESCrE &lt;- str_split(string = plasmid_data$ESCrE_plasmid_genes,&#39;;&#39;) %&gt;% unlist %&gt;% subset(.==ESCrE)
-  n_chromosome &lt;- length(chromosome_ESCrE)
-  n_plasmid &lt;- length(plasmid_ESCrE)
-  prop_plasmid &lt;-  round(n_plasmid / (n_chromosome + n_plasmid) * 100 , 2)
-  results &lt;- cbind.data.frame(ESCrE,n_chromosome,n_plasmid,prop_plasmid)
-  return(results)
-}
-
-ESCrE_prop_data &lt;- lapply(ESCrE_genes,analyze_frequency_on_plasmid,plasmid_data) %&gt;% do.call(rbind,.) %&gt;% arrange(prop_plasmid,n_plasmid) 
+<pre class="r"><code>ESCrE_prop_data &lt;- lapply(ESCrE_genes,analyze_frequency_on_plasmid,plasmid_data) %&gt;% do.call(rbind,.) %&gt;% arrange(prop_plasmid,n_plasmid) 
  
 ESCrE_prop_data %&gt;% arrange(prop_plasmid) %&gt;% gontjesr::favorite_kable()</code></pre>
 <table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table table-striped table-hover table-condensed table-responsive">
@@ -764,6 +765,20 @@ prop_plasmid
 <tbody>
 <tr>
 <td style="text-align:left;">
+ampC*
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
 blaACT-115
 </td>
 <td style="text-align:right;">
@@ -778,10 +793,52 @@ blaACT-115
 </tr>
 <tr>
 <td style="text-align:left;">
-blaACT-17
+blaACT-12*
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaACT-131*
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaACT-16
 </td>
 <td style="text-align:right;">
 3
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaACT-17
+</td>
+<td style="text-align:right;">
+8
 </td>
 <td style="text-align:right;">
 0
@@ -795,7 +852,49 @@ blaACT-17
 blaACT-24
 </td>
 <td style="text-align:right;">
-3
+4
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaACT-25
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaACT-27
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaACT-43
+</td>
+<td style="text-align:right;">
+1
 </td>
 <td style="text-align:right;">
 0
@@ -807,6 +906,20 @@ blaACT-24
 <tr>
 <td style="text-align:left;">
 blaACT-75*
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaCMY-13
 </td>
 <td style="text-align:right;">
 1
@@ -834,6 +947,20 @@ blaCMY-13*
 </tr>
 <tr>
 <td style="text-align:left;">
+blaCMY-189*
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
 blaCMY-190*
 </td>
 <td style="text-align:right;">
@@ -849,6 +976,20 @@ blaCMY-190*
 <tr>
 <td style="text-align:left;">
 blaCMY-25*
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaCMY-48
 </td>
 <td style="text-align:right;">
 1
@@ -907,7 +1048,21 @@ blaEC
 blaEC-15*
 </td>
 <td style="text-align:right;">
-1
+6
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+0.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaEC-19*
+</td>
+<td style="text-align:right;">
+2
 </td>
 <td style="text-align:right;">
 0
@@ -921,7 +1076,7 @@ blaEC-15*
 blaEC-5
 </td>
 <td style="text-align:right;">
-8
+11
 </td>
 <td style="text-align:right;">
 0
@@ -935,7 +1090,7 @@ blaEC-5
 blaEC-5*
 </td>
 <td style="text-align:right;">
-39
+60
 </td>
 <td style="text-align:right;">
 0
@@ -974,30 +1129,30 @@ blaOXY-1-11
 </tr>
 <tr>
 <td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:right;">
+34
+</td>
+<td style="text-align:right;">
+32
+</td>
+<td style="text-align:right;">
+48.48
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
 blaCMY-2
 </td>
 <td style="text-align:right;">
 4
 </td>
 <td style="text-align:right;">
-2
+5
 </td>
 <td style="text-align:right;">
-33.33
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-blaCTX-M-15
-</td>
-<td style="text-align:right;">
-26
-</td>
-<td style="text-align:right;">
-19
-</td>
-<td style="text-align:right;">
-42.22
+55.56
 </td>
 </tr>
 <tr>
@@ -1005,13 +1160,27 @@ blaCTX-M-15
 blaCTX-M-27
 </td>
 <td style="text-align:right;">
+11
+</td>
+<td style="text-align:right;">
+21
+</td>
+<td style="text-align:right;">
+65.62
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+blaKPC-3
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:right;">
 7
 </td>
 <td style="text-align:right;">
-14
-</td>
-<td style="text-align:right;">
-66.67
+87.50
 </td>
 </tr>
 <tr>
@@ -1058,6 +1227,20 @@ blaSHV-12
 </tr>
 <tr>
 <td style="text-align:left;">
+blaCMY-2?
+</td>
+<td style="text-align:right;">
+0
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:right;">
+100.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
 blaCTX-M-55
 </td>
 <td style="text-align:right;">
@@ -1086,7 +1269,7 @@ blaCMY-4
 </tr>
 <tr>
 <td style="text-align:left;">
-blaKPC-2
+blaNDM-5
 </td>
 <td style="text-align:right;">
 0
@@ -1100,13 +1283,13 @@ blaKPC-2
 </tr>
 <tr>
 <td style="text-align:left;">
-blaKPC-3
+blaKPC-2
 </td>
 <td style="text-align:right;">
 0
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 <td style="text-align:right;">
 100.00
@@ -1116,22 +1299,14 @@ blaKPC-3
 </table>
 <pre class="r"><code>plasmidic_ESCrEs &lt;- subset(ESCrE_prop_data,prop_plasmid&gt;0) %&gt;% .$ESCrE %&gt;% sort
 
-saveRDS(ESCrE_prop_data,&quot;./data/ESBL_plasmids/MERLIN_ESCrE_proportion_plasmidic.RDS&quot;)
+saveRDS(ESCrE_prop_data,&quot;./data/ESBL_plasmids/MERLIN_cohort_ESCrE_proportion_plasmidic.RDS&quot;)
 
-get_plasmidic_ESBSL &lt;-  function(isolate,mobsuite_gene_pres,ESCrE_plasmidic_genes){
-  mobsuite_df &lt;- subset(mobsuite_gene_pres,genomic_id == isolate)
-  ESCrE_plasmidic_genes_str &lt;- mobsuite_df %&gt;% select(ESCrE_plasmidic_genes) %&gt;% select_if(colSums(.)==1) %&gt;% colnames() %&gt;% paste0(collapse=&quot;;&quot;) %&gt;% {ifelse(length(.)==0,&quot;&quot;,.)} 
-     
-  results &lt;- cbind.data.frame(genomic_id = isolate,ESCrE_plasmidic_genes=ESCrE_plasmidic_genes_str)
-  return(results)
-}
-
-ESCrE_plasmidic_presence &lt;- lapply(df$genomic_id,get_plasmidic_ESBSL,mobsuite_gene_pres,plasmidic_ESCrEs) %&gt;% do.call(rbind,.)</code></pre>
+ESCrE_plasmidic_presence &lt;- lapply(df$genomic_id,get_plasmidic_ESCrE,mobsuite_gene_pres,plasmidic_ESCrEs) %&gt;% do.call(rbind,.)</code></pre>
 </div>
 <div id="save-overall-data" class="section level1">
 <h1>Save overall data</h1>
 <pre class="r"><code>plasmid_data &lt;-  left_join(plasmid_data,ESCrE_plasmidic_presence) 
-saveRDS(plasmid_data,&quot;./data/ESBL_plasmids/MERLIN_index_cohort_beta_lactam_location_data.RDS&quot;)</code></pre>
+saveRDS(plasmid_data,&quot;./data/ESBL_plasmids/MERLIN_cohort_beta_lactam_location_data.RDS&quot;)</code></pre>
 </div>
 
 
