--- a/scripts/amrfinder/curate_amrfinder_results.html
+++ b/scripts/amrfinder/curate_amrfinder_results.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-09" />
+<meta name="date" content="2025-10-31" />
 
 <title>Curate the amrfinder results for these genomes</title>
 
@@ -353,7 +353,7 @@ display: none;
 <h1 class="title toc-ignore">Curate the amrfinder results for these
 genomes</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-09</h4>
+<h4 class="date">2025-10-31</h4>
 
 </div>
 
@@ -376,7 +376,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                                           &quot;msla0572.local&quot; 
+                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -388,7 +388,7 @@ Sys.info()</code></pre>
 <pre class="r"><code>sessionInfo()</code></pre>
 <pre><code>R version 4.5.1 (2025-06-13)
 Platform: x86_64-apple-darwin20
-Running under: macOS Sequoia 15.7
+Running under: macOS Sequoia 15.7.1
 
 Matrix products: default
 BLAS:   /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRblas.0.dylib 
@@ -421,7 +421,7 @@ loaded via a namespace (and not attached):
 </div>
 <div id="load-data" class="section level1">
 <h1>Load data</h1>
-<pre><code>[1] &quot;Number of final isolates that were ESCRE and QC passing: 170&quot;</code></pre>
+<pre><code>[1] &quot;Number of final isolates that were ESCRE and QC passing: 168&quot;</code></pre>
 </div>
 <div id="create-master-amrfinder-script" class="section level1">
 <h1>Create master amrfinder script</h1>
