--- a/scripts/results_sections/results_section_3_prolonged_colonization_data.html
+++ b/scripts/results_sections/results_section_3_prolonged_colonization_data.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-09" />
+<meta name="date" content="2025-10-31" />
 
 <title>Results Section 3: Discrimination of prolonged colonization using WGS</title>
 
@@ -577,7 +577,7 @@ display: none;
 <h1 class="title toc-ignore">Results Section 3: Discrimination of
 prolonged colonization using WGS</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-09</h4>
+<h4 class="date">2025-10-31</h4>
 
 </div>
 
@@ -603,7 +603,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                                           &quot;msla0572.local&quot; 
+                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -615,7 +615,7 @@ Sys.info()</code></pre>
 <pre class="r"><code>sessionInfo()</code></pre>
 <pre><code>R version 4.5.1 (2025-06-13)
 Platform: x86_64-apple-darwin20
-Running under: macOS Sequoia 15.7
+Running under: macOS Sequoia 15.7.1
 
 Matrix products: default
 BLAS:   /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRblas.0.dylib 
@@ -651,6 +651,9 @@ loaded via a namespace (and not attached):
 </div>
 <div id="load-data" class="section level1">
 <h1>Load data</h1>
+</div>
+<div id="get-numer-of-positive-households" class="section level1">
+<h1>Get numer of positive households</h1>
 <pre><code>[1] &quot;Number of subjects with index specimens positive: 31&quot;</code></pre>
 <pre><code>[1] &quot;Proportion of subjects with index specimens positive: 0.775&quot;</code></pre>
 </div>
