--- a/scripts/results_sections/results_section_4_ESCrE_sharing_prolonged_colonization.html
+++ b/scripts/results_sections/results_section_4_ESCrE_sharing_prolonged_colonization.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Kyle Gontjes" />
 
-<meta name="date" content="2025-10-09" />
+<meta name="date" content="2025-10-31" />
 
 <title>Results Section 4: Sharing of ESCrEs provides additional support for prolonged colonization</title>
 
@@ -353,7 +353,7 @@ display: none;
 <h1 class="title toc-ignore">Results Section 4: Sharing of ESCrEs
 provides additional support for prolonged colonization</h1>
 <h4 class="author">Kyle Gontjes</h4>
-<h4 class="date">2025-10-09</h4>
+<h4 class="date">2025-10-31</h4>
 
 </div>
 
@@ -379,7 +379,7 @@ Sys.info()</code></pre>
                                                                                                     version 
 &quot;Darwin Kernel Version 24.6.0: Mon Aug 11 21:16:05 PDT 2025; root:xnu-11417.140.69.701.11~1/RELEASE_X86_64&quot; 
                                                                                                    nodename 
-                                                                                           &quot;msla0572.local&quot; 
+                                                                              &quot;msla0572.wifi.med.umich.edu&quot; 
                                                                                                     machine 
                                                                                                    &quot;x86_64&quot; 
                                                                                                       login 
@@ -391,7 +391,7 @@ Sys.info()</code></pre>
 <pre class="r"><code>sessionInfo()</code></pre>
 <pre><code>R version 4.5.1 (2025-06-13)
 Platform: x86_64-apple-darwin20
-Running under: macOS Sequoia 15.7
+Running under: macOS Sequoia 15.7.1
 
 Matrix products: default
 BLAS:   /Library/Frameworks/R.framework/Versions/4.5-x86_64/Resources/lib/libRblas.0.dylib 
@@ -429,6 +429,9 @@ loaded via a namespace (and not attached):
 </div>
 <div id="load-data" class="section level1">
 <h1>Load data</h1>
+</div>
+<div id="get-list-of-index-positive-households" class="section level1">
+<h1>Get list of index positive households</h1>
 <pre><code>[1] &quot;Number of subjects with index specimens positive: 31&quot;</code></pre>
 <pre><code>[1] &quot;Proportion of subjects with index specimens positive: 0.775&quot;</code></pre>
 </div>
@@ -2073,6 +2076,45 @@ AA474
 1H
 </td>
 <td style="text-align:left;">
+MERLIN_284
+</td>
+<td style="text-align:left;">
+Klebsiella pneumoniae ST 45 Cluster 1
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+AA031;AA110;AA123;AA277;AB531;AC082;AD094
+</td>
+<td style="text-align:left;">
+blaCTX-M-15;blaSHV-1?;blaTEM-1?<em>;blaTEM-105?</em>
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+AA031;AA277
+</td>
+<td style="text-align:left;">
+AA277
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+1H
+</td>
+<td style="text-align:left;">
 MERLIN_268
 </td>
 <td style="text-align:left;">
@@ -2114,27 +2156,27 @@ AA378
 1H
 </td>
 <td style="text-align:left;">
-MERLIN_284
+MERLIN_271
 </td>
 <td style="text-align:left;">
 Klebsiella pneumoniae ST 45 Cluster 1
 </td>
 <td style="text-align:right;">
-1
+2
 </td>
 <td style="text-align:left;">
-AA031;AA110;AA123;AA277;AB531;AC082;AD094
+AA277;AB183;AB531;AE974
 </td>
 <td style="text-align:left;">
-blaCTX-M-15;blaSHV-1?;blaTEM-1?<em>;blaTEM-105?</em>
-</td>
-<td style="text-align:left;">
-blaCTX-M-15
+blaCTX-M-15;blaTEM-1?<em>;blaTEM-105?</em>
 </td>
 <td style="text-align:left;">
 blaCTX-M-15
 </td>
 <td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
 </td>
 <td style="text-align:left;">
 </td>
@@ -2142,7 +2184,7 @@ blaCTX-M-15
 blaCTX-M-15
 </td>
 <td style="text-align:left;">
-AA031;AA277
+AA277
 </td>
 <td style="text-align:left;">
 AA277
@@ -2187,45 +2229,6 @@ AC026
 </td>
 <td style="text-align:left;">
 AC026
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-1H
-</td>
-<td style="text-align:left;">
-MERLIN_271
-</td>
-<td style="text-align:left;">
-Klebsiella pneumoniae ST 45 Cluster 1
-</td>
-<td style="text-align:right;">
-2
-</td>
-<td style="text-align:left;">
-AA277;AB183;AB531;AE974
-</td>
-<td style="text-align:left;">
-blaCTX-M-15;blaTEM-1?<em>;blaTEM-105?</em>
-</td>
-<td style="text-align:left;">
-blaCTX-M-15
-</td>
-<td style="text-align:left;">
-blaCTX-M-15
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-blaCTX-M-15
-</td>
-<td style="text-align:left;">
-AA277
-</td>
-<td style="text-align:left;">
-AA277
 </td>
 </tr>
 <tr>
@@ -4693,6 +4696,45 @@ AA474
 1H
 </td>
 <td style="text-align:left;">
+MERLIN_284
+</td>
+<td style="text-align:left;">
+Klebsiella pneumoniae ST 45 Cluster 1
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+AA031;AA110;AA123;AA277;AB531;AC082;AD094
+</td>
+<td style="text-align:left;">
+blaCTX-M-15;blaSHV-1?;blaTEM-1?<em>;blaTEM-105?</em>
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
+AA031;AA277
+</td>
+<td style="text-align:left;">
+AA277
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+1H
+</td>
+<td style="text-align:left;">
 MERLIN_268
 </td>
 <td style="text-align:left;">
@@ -4734,27 +4776,27 @@ AA378
 1H
 </td>
 <td style="text-align:left;">
-MERLIN_284
+MERLIN_271
 </td>
 <td style="text-align:left;">
 Klebsiella pneumoniae ST 45 Cluster 1
 </td>
 <td style="text-align:right;">
-1
+2
 </td>
 <td style="text-align:left;">
-AA031;AA110;AA123;AA277;AB531;AC082;AD094
+AA277;AB183;AB531;AE974
 </td>
 <td style="text-align:left;">
-blaCTX-M-15;blaSHV-1?;blaTEM-1?<em>;blaTEM-105?</em>
-</td>
-<td style="text-align:left;">
-blaCTX-M-15
+blaCTX-M-15;blaTEM-1?<em>;blaTEM-105?</em>
 </td>
 <td style="text-align:left;">
 blaCTX-M-15
 </td>
 <td style="text-align:left;">
+blaCTX-M-15
+</td>
+<td style="text-align:left;">
 </td>
 <td style="text-align:left;">
 </td>
@@ -4762,7 +4804,7 @@ blaCTX-M-15
 blaCTX-M-15
 </td>
 <td style="text-align:left;">
-AA031;AA277
+AA277
 </td>
 <td style="text-align:left;">
 AA277
@@ -4807,45 +4849,6 @@ AC026
 </td>
 <td style="text-align:left;">
 AC026
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-1H
-</td>
-<td style="text-align:left;">
-MERLIN_271
-</td>
-<td style="text-align:left;">
-Klebsiella pneumoniae ST 45 Cluster 1
-</td>
-<td style="text-align:right;">
-2
-</td>
-<td style="text-align:left;">
-AA277;AB183;AB531;AE974
-</td>
-<td style="text-align:left;">
-blaCTX-M-15;blaTEM-1?<em>;blaTEM-105?</em>
-</td>
-<td style="text-align:left;">
-blaCTX-M-15
-</td>
-<td style="text-align:left;">
-blaCTX-M-15
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-blaCTX-M-15
-</td>
-<td style="text-align:left;">
-AA277
-</td>
-<td style="text-align:left;">
-AA277
 </td>
 </tr>
 <tr>
